--- a/README.rdoc
+++ b/README.rdoc
@@ -14,6 +14,6 @@ Description goes here.
 
 == Copyright
 
-Copyright (c) 2014 yutaka.kanno. See LICENSE.txt for
+Copyright (c) 2014 passol78 See LICENSE.txt for
 further details.
 
